# telegram-antispam

./: .env.sample  .gitignore  README.md  README.ru.md  main.py  pyproject.toml  setup_bot.py
.github/workflows/: deploy.yaml  static-checks.yaml
clean_text/: README.md  v1.py  v7_tiny.py
discovery/: README.md  export_spam_dump.py  optimal_container_idle_time.py
