[project]
name = "antispam-tlg-ru"
version = "0.1.0"
description = "A Telegram bot that can automatically delete Russian spam messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.16.0",
    "fastapi>=0.115.6",
    "modal>=0.70.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
    "telethon>=1.38.1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]
