[project]
name = "telegram-antispam"
version = "0.1.0"
description = "A Telegram bot that can automatically delete Russian spam messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "fastapi>=0.116.1",
    "modal>=1.1.3",
    "pillow>=12.0.0",
    "pydantic>=2.11.4",
    "pytesseract>=0.3.13",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
    "telethon>=1.40.0",
]
